allah askina ol

--- a/front/vercel.json
+++ b/front/vercel.json
@@ -1,18 +1,12 @@
 {
   "rewrites": [
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/resources/(.*)",
-      "dest": "/resources/$1"
+      "source": "/resources/:path*",
+      "destination": "/resources/:path*"
     },
     {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
